--- a/index.html
+++ b/index.html
@@ -220,7 +220,48 @@
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
         <!-- service section start -->
-  
+    <section class="servi">
+      <div class="tx-era">
+        <div class="mo">
+          <h2 class="font-medium text-center rounded-full tracking-wide antialiased">What We Do For You</h2>
+        </div>  
+        <h3 class="text-center mt-8 text-4xl font-bold text-blue-950 leading-tight">The features that make Our</h3>
+        <h3 class="text-center text-4xl font-bold text-blue-950 leading-tight">Service unique</h3>
+      </div>
+      <div class="all-tx-era mt-20">
+        <div class=" mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
+          <div class="cart fhover flex gap-x-7">
+            <div class="cart-1 box  p-8 border-slate-300 rounded-xl">
+              <img class="bg-blue-100 py-4 px-4 w-16 h-16 rounded-xl" src="Images/new-ideas-in-process.png" alt="">
+              <h4 class="text-xl py-4 font-semibold antialiased text-blue-950">Finance Planning</h4>
+              <p class="text-base pb-5 font-semibold text-slate-400 leading-7  antialiased">Morem ipsum dolor sittemet consectetur adipiscing elitflorai psum dolor.</p>
+              <a href="#" class="text-sm font-semibold text-slate-400 antialiased">See Details <i class="px-1 text-blue-600 text-lg fa-solid fa-arrow-right"></i></a>
+            </div>
+            <div class="cart-2 box p-8 border-slate-300 rounded-xl">
+              <img class="bg-blue-100 py-4 px-4 w-16 h-16 rounded-xl" src="Images/layers.png" alt="">
+              <h4 class="text-xl py-4 font-semibold antialiased text-blue-950">Business Strategy</h4>
+              <p class="text-base pb-5 font-semibold text-slate-400 leading-7  antialiased">Morem ipsum dolor sittemet consectetur adipiscing elitflorai psum dolor.</p>
+              <a href="#" class="text-sm font-semibold text-slate-400 antialiased">See Details <i class="px-1 text-blue-600 text-lg fa-solid fa-arrow-right"></i></a>
+            </div>
+            <div class="cart-3 box  p-8 border-slate-300 rounded-xl">
+              <img class="bg-blue-100 py-3 px-3 w-16 h-16 rounded-xl" src="Images/accounting.png" alt="">
+              <h4 class="text-xl py-4 font-semibold antialiased text-blue-950">Tax File Audit</h4>
+              <p class="text-base pb-5 font-semibold text-slate-400 leading-7  antialiased">Morem ipsum dolor sittemet consectetur adipiscing elitflorai psum dolor.</p>
+              <a href="#" class="text-sm font-semibold text-slate-400 antialiased">See Details <i class="px-1 text-blue-600 text-lg fa-solid fa-arrow-right"></i></a>
+            </div>
+            <div class="cart-4 box p-8 border-slate-300 rounded-xl">
+              <img class="bg-blue-100 py-4 px-4 w-16 h-16 rounded-xl" src="Images/investment.png" alt="">
+              <h4 class="text-xl py-4 font-semibold antialiased text-blue-950">Audit & Assurance</h4>
+              <p class="text-base pb-5 font-semibold text-slate-400 leading-7  antialiased">Morem ipsum dolor sittemet consectetur adipiscing elitflorai psum dolor.</p>
+              <a href="#" class="text-sm font-semibold text-slate-400 antialiased">See Details <i class="px-1 text-blue-600 text-lg fa-solid fa-arrow-right"></i></a>
+            </div>
+          </div>
+          <!-- <h3 class="text-center">The features that make Our</h3>
+          <h3 class="text-center">Service unique</h3> -->
+         </div> 
+      </div>
+     </section>
+    </section>
         <!-- service section end -->
       </main>
 
